tests/errors/preprocessor/not_enough_param.c
#define MIN(a) sin(a)

int main(void)
{
	int x, y;
	x = 10;
	у = 20;

	printf("%d", MIN(x, y));
	return 0;
}
